Email footer refactor

--- a/frappe/public/less/email.less
+++ b/frappe/public/less/email.less
@@ -63,6 +63,15 @@ hr {
 	}
 }
 
+.email-footer-container {
+	margin-top: 10px;
+}
+
+.email-unsubscribe a {
+	color: @text-muted;
+	text-decoration: underline;
+}
+
 .btn {
 	text-decoration: none;
 	padding: 7px 10px;
