--- a/frappe/public/less/email.less
+++ b/frappe/public/less/email.less
@@ -65,6 +65,10 @@ hr {
 
 .email-footer-container {
 	margin-top: 10px;
+
+	& > div:not(:last-child) {
+		margin-bottom: 5px;
+	}
 }
 
 .email-unsubscribe a {
