[style] cleanup tags

--- a/frappe/public/css/list.css
+++ b/frappe/public/css/list.css
@@ -215,17 +215,19 @@
   text-align: left;
 }
 .tag-row {
-  margin-top: 5px;
   padding-left: 55px;
+  margin-bottom: 0px;
+  margin-top: -5px;
 }
 .taggle_placeholder {
   top: 0;
-  left: 0;
+  left: 5px;
   font-size: 11px;
+  color: #8D99A6;
 }
 .taggle_list {
-  padding-left: 0;
-  margin-bottom: 0;
+  padding-left: 5px;
+  margin-bottom: 3px;
 }
 .taggle_list .taggle {
   font-size: 11px;
