--- a/frappe/public/less/list.less
+++ b/frappe/public/less/list.less
@@ -273,19 +273,21 @@
 // tags
 
 .tag-row {
-	margin-top: 5px;
 	padding-left: 55px;
+	margin-bottom: 0px;
+	margin-top: -5px;
 }
 
 .taggle_placeholder {
 	top: 0;
-	left: 0;
+	left: 5px;
 	font-size: 11px;
+	color: @text-muted;
 }
 
 .taggle_list {
-	padding-left: 0;
-	margin-bottom: 0;
+	padding-left: 5px;
+	margin-bottom: 3px;
 
 	.taggle {
 		font-size: 11px;
