--- a/frappe/public/less/form.less
+++ b/frappe/public/less/form.less
@@ -391,7 +391,10 @@ h6.uppercase, .h6.uppercase {
 	.action-btns {
 	    position: absolute;
 	    right: 0;
-	    padding: 5px 15px 2px 5px;
+		padding: 9px 15px 2px 5px;
+		.edit-btn-container {
+			margin-right: 10px;
+		}
 	}
 
 	.comment-header {
@@ -401,7 +404,7 @@ h6.uppercase, .h6.uppercase {
 		color: @text-muted;
 		border-bottom: 1px solid @light-border-color;
 		&.links-active {
-			padding-right: 60px;
+			padding-right: 95px;
 		}
 		.commented-on-small {
 			display: none;
@@ -531,6 +534,8 @@ h6.uppercase, .h6.uppercase {
 
 .timeline-item .reply-link {
 	padding-left: 7px;
+	margin-left: 5px;
+	margin-top: 3px;
 }
 
 .timeline-head {
