--- a/frappe/public/less/mobile.less
+++ b/frappe/public/less/mobile.less
@@ -435,12 +435,18 @@ body {
 					}
 				}
 				.action-btns {
-					padding: 5px 10px 2px 5px;
+					padding: 7px 10px 2px 5px;
+					.edit-btn-container {
+						margin-right: 0;
+					}
 				}
 				.comment-header{
 					padding: 7px 10px;
 					.links-active {
 						padding-right: 10px;
+					}
+					.reply-link {
+						margin-left: 0;
 					}
 				}
 				.avatar-medium {
