--- a/frappe/public/css/form.css
+++ b/frappe/public/css/form.css
@@ -299,7 +299,10 @@ h6.uppercase,
 .timeline-item.user-content .action-btns {
   position: absolute;
   right: 0;
-  padding: 5px 15px 2px 5px;
+  padding: 9px 15px 2px 5px;
+}
+.timeline-item.user-content .action-btns .edit-btn-container {
+  margin-right: 10px;
 }
 .timeline-item.user-content .comment-header {
   background-color: #fafbfc;
@@ -309,7 +312,7 @@ h6.uppercase,
   border-bottom: 1px solid #EBEFF2;
 }
 .timeline-item.user-content .comment-header.links-active {
-  padding-right: 60px;
+  padding-right: 95px;
 }
 .timeline-item.user-content .comment-header .commented-on-small {
   display: none;
@@ -410,6 +413,8 @@ h6.uppercase,
 }
 .timeline-item .reply-link {
   padding-left: 7px;
+  margin-left: 5px;
+  margin-top: 3px;
 }
 .timeline-head {
   background-color: white;
