--- a/frappe/templates/web.html
+++ b/frappe/templates/web.html
@@ -8,7 +8,7 @@
 		data-doctype="{{ doctype }}"{% endif %}>
 	<div class="row {% if show_sidebar %}vert-line{% endif %}">
 		{% if show_sidebar %}
-			<div class="col-sm-3 sidebar-block hidden-xs">
+			<div class="col-sm-3 sidebar-block">
 				{% include "templates/includes/web_sidebar.html" %}
 			</div>
 		{% endif %}
@@ -48,6 +48,7 @@
 					{%- block page_content -%}{%- endblock -%}
 				</div>
 			</div>
+			<!-- sidebar ends -->
 		</div>
 	</div>
 </div>
