--- a/frappe/public/less/website.less
+++ b/frappe/public/less/website.less
@@ -221,9 +221,13 @@ fieldset {
 }
 
 .page-container {
-	padding: 0px;
+	display: flex;
 	max-width: 970px;
-	margin: auto;
+	margin: 0 auto;
+
+	@media(max-width: @screen-xs) {
+		flex-direction: column-reverse;
+	}
 }
 
 .page-max-width {
@@ -241,12 +245,11 @@ fieldset {
 .web-sidebar {
 	position: relative;
 
-	.sidebar-item {
+	.sidebar-item:not(:last-child) {
 		margin: 0px;
 		padding-bottom: 12px;
 		border: none;
 		color: @text-muted;
-		font-size: 12px;
 
 		.badge {
 			font-weight: normal;
@@ -255,20 +258,21 @@ fieldset {
 	}
 
 	.sidebar-item a {
-		color: @text-color !important;
-	}
+		color: @text-muted;
 
-	.sidebar-item a.active {
-		color: @text-color !important;
-		font-weight: 500 !important;
+		&.active {
+			color: @text-color;
+		}
 	}
 
 	.sidebar-items {
-		// margin-top:30px;
-		margin-bottom:30px;
 		.title{
 			font-size: 14px;
 			font-weight: bold;
+		}
+
+		ul {
+			margin-bottom: 0;
 		}
 	}
 }
@@ -472,15 +476,32 @@ a.active {
 	margin-top: 60px;
 }
 
-.sidebar-block, .page-content {
-	padding-top: 30px;
-	padding-bottom: 50px;
-	//width: 20%;
+.sidebar-block {
+	flex: 1;
+	font-size: @text-medium;
+	border-right: 1px solid @border-color;
+	padding: 30px;
+	padding-left: 0px;
+
+	@media(max-width: @screen-xs) {
+		font-size: @text-regular;
+		border-right: none;
+		border-top: 1px solid @border-color;
+		padding-left: 20px;
+	}
+}
+
+.page-content {
+	flex: 6;
+
+	h1:first-child {
+		margin-top: 0;
+	}
 }
 
 .page-content.with-sidebar {
-	padding-left: 50px;
-	//width: 80%;
+	padding: 30px;
+	padding-left: 40px;
 }
 
 .your-account-info {
@@ -493,12 +514,6 @@ a.active {
 	}
 	.sidebar-block {
 		width: 100%;
-
-		.web-sidebar {
-			margin: 0px -15px;
-			padding: 0px 30px;
-			border-bottom: 1px solid @border-color;
-		}
 	}
 	.page-content.with-sidebar {
 		width: 100%;
