--- a/frappe/public/less/website.less
+++ b/frappe/public/less/website.less
@@ -125,6 +125,7 @@ li {
 }
 
 .page_content {
+	padding-top: 30px;
 	padding-bottom: 30px;
 }
 
@@ -181,6 +182,7 @@ li {
 }
 
 .page-head {
+	margin-bottom: -30px;
 	h1, h2 {
 		margin-top: 0px;
 	}
@@ -502,6 +504,10 @@ a.active {
 .page-content.with-sidebar {
 	padding: 30px;
 	padding-left: 40px;
+}
+
+.page-content.without-sidebar {
+	padding-top: 30px;
 }
 
 .your-account-info {
