--- a/frappe/public/less/desk.less
+++ b/frappe/public/less/desk.less
@@ -1023,11 +1023,11 @@ input[type="checkbox"] {
 	}
 }
 
-// Progress Dialog
-
-.dialog-slide {
+// Slides
+.slides-wrapper {
 	.fa-circle {
 		font-size: 10px;
+		margin: 0px 2px;
 		&.active {
 			color: #5e64ff;
 		}
