[minor] make email alert configurable, so we can use it list default print formats

--- a/frappe/public/css/form.css
+++ b/frappe/public/css/form.css
@@ -588,6 +588,15 @@ select.form-control {
 .password-strength-message {
   margin-top: -10px;
 }
+.control-code {
+  height: 400px;
+  font-family: Monaco, "Courier New", monospace;
+  background-color: black;
+  color: #fffce7;
+  font-size: 12px;
+  line-height: 1.7em;
+  border: none;
+}
 .delivery-status-indicator {
   display: inline-block;
   margin-top: -3px;
