--- a/frappe/public/less/form.less
+++ b/frappe/public/less/form.less
@@ -735,6 +735,16 @@ select.form-control {
 	margin-top: -10px;
 }
 
+.control-code {
+	height: 400px;
+	font-family: Monaco, "Courier New", monospace;
+	background-color: black;
+	color: @light-yellow;
+	font-size: 12px;
+	line-height: 1.7em;
+	border: none;
+}
+
 .delivery-status-indicator {
 	display: inline-block;
 	margin-top: -3px;
