[slides] fix primary button

--- a/frappe/public/less/desk.less
+++ b/frappe/public/less/desk.less
@@ -1028,6 +1028,7 @@ input[type="checkbox"] {
 	.fa-circle {
 		font-size: 10px;
 		margin: 0px 2px;
+		cursor: pointer;
 		&.active {
 			color: #5e64ff;
 		}
