--- a/frappe/public/css/desk.css
+++ b/frappe/public/css/desk.css
@@ -1085,6 +1085,7 @@ input[type="checkbox"]:checked:before {
 .slides-wrapper .fa-circle {
   font-size: 10px;
   margin: 0px 2px;
+  cursor: pointer;
 }
 .slides-wrapper .fa-circle.active {
   color: #5e64ff;
