[added] print style

--- a/frappe/public/js/frappe/form/templates/print_layout.html
+++ b/frappe/public/js/frappe/form/templates/print_layout.html
@@ -3,6 +3,8 @@
 		<div class="col-xs-2">
 			<select class="print-preview-select input-sm form-control"></select></div>
 		<div class="col-xs-2">
+			<select class="print-style-select input-sm form-control"></select></div>
+		<div class="col-xs-2">
 			<select class="languages input-sm form-control"></select></div>
 		<div class="col-xs-2">
 			<div class="checkbox small" style="margin-top: 7px; margin-bottom: 0px;">
@@ -11,7 +13,7 @@
                     {%= __("Letter Head") %}</label>
             </div>
         </div>
-		<div class="col-xs-6 text-right">
+		<div class="col-xs-4 text-right">
             <!-- <a class="close btn-print-close" style="margin-top: 2px; margin-left: 10px;">&times;</a> -->
             <div class="btn-group">
                 <a class="btn-print-print btn-sm btn btn-default">
