--- a/frappe/desk/page/setup_wizard/setup_wizard.css
+++ b/frappe/desk/page/setup_wizard/setup_wizard.css
@@ -8,12 +8,8 @@
 }
 
 @media (min-width: 768px) {
-	.setup-wizard-slide.single-column {
+	.setup-wizard-slide {
 		max-width: 500px;
-	}
-
-	.setup-wizard-slide.two-column {
-		max-width: 768px;
 	}
 }
 
@@ -45,7 +41,7 @@
 }
 
 .setup-wizard-slide.with-form {
-	margin: 30px auto;
+	margin: 60px auto;
 	padding: 10px 50px;
 	border: 1px solid #d1d8dd;
 	box-shadow: 0px 3px 5px rgba(0, 0, 0, 0.1);
@@ -144,7 +140,6 @@
 	opacity: 1;
 	cursor: pointer;
 }
-
 
 .setup-wizard-message-image {
 	margin: 15px auto;
