--- a/frappe/public/less/form.less
+++ b/frappe/public/less/form.less
@@ -14,6 +14,13 @@
 	margin: 0px;
 	padding: 10px 0px;
 	border-bottom: 1px solid @border-color;
+
+	> div {
+		padding-right: 0px;
+	}
+	> div:last-child {
+		padding-right: 15px;
+	}
 }
 
 .form-inner-toolbar {
@@ -735,7 +742,7 @@ select.form-control {
 	margin-top: -10px;
 }
 
-.control-code {
+.control-code, .control-code.bold {
 	height: 400px;
 	font-family: Monaco, "Courier New", monospace;
 	background-color: black;
