--- a/frappe/public/less/desk.less
+++ b/frappe/public/less/desk.less
@@ -1052,6 +1052,14 @@ input[type="checkbox"] {
 	.success-state {
 		margin-bottom: 20px;
 	}
+	.next-steps-links {
+		.title {
+			text-transform: uppercase;
+			color: #8D99A6;
+			font-size: 11px;
+		}
+
+	}
 	.btn-primary {
 		font-weight: bold;
 	}
