--- a/frappe/public/js/frappe/form/templates/print_layout.html
+++ b/frappe/public/js/frappe/form/templates/print_layout.html
@@ -3,9 +3,8 @@
 		<div class="col-xs-2">
 			<select class="print-preview-select input-sm form-control"></select></div>
 		<div class="col-xs-2">
-			<select class="print-style-select input-sm form-control"></select></div>
-		<div class="col-xs-2">
-			<select class="languages input-sm form-control"></select></div>
+			<select class="languages input-sm form-control"
+				placeholder="{{ __("Language") }}"></select></div>
 		<div class="col-xs-2">
 			<div class="checkbox small" style="margin-top: 7px; margin-bottom: 0px;">
                 <label>
@@ -13,13 +12,15 @@
                     {%= __("Letter Head") %}</label>
             </div>
         </div>
-		<div class="col-xs-4 text-right">
+		<div class="col-xs-6 text-right">
             <!-- <a class="close btn-print-close" style="margin-top: 2px; margin-left: 10px;">&times;</a> -->
             <div class="btn-group">
                 <a class="btn-print-print btn-sm btn btn-default">
                     <strong>{%= __("Print") %}</strong></a>
+    			<a class="btn-sm btn btn-default" href="#Form/Print Settings">
+                    {%= __("Settings...") %}</a>
     			<a class="btn-print-edit btn-sm btn btn-default">
-                    {%= __("Customize") %}</a>
+                    {%= __("Customize...") %}</a>
     			<a class="btn-print-preview btn-sm btn btn-default">
                     {%= __("Full Page") %}</a>
     			<a class="btn-download-pdf btn-sm btn btn-default">
