--- a/frappe/public/css/report.css
+++ b/frappe/public/css/report.css
@@ -51,3 +51,13 @@
 .column-picker-dialog .add-btn {
   margin-bottom: 2px;
 }
+.data-table .frappe-control {
+  margin: 0;
+  padding: 0;
+}
+.data-table .frappe-control .form-group {
+  margin: 0;
+}
+.data-table .frappe-control input {
+  border: none;
+}
