--- a/frappe/public/less/datatable.less
+++ b/frappe/public/less/datatable.less
@@ -1,11 +1,19 @@
 @import "variables.less";
 
+.table {
+	margin: 0;
+}
+
 .data-table {
 	width: 100%;
 	position: relative;
 	overflow: auto;
 	font-size: @text-medium;
 	border-collapse: collapse;
+
+	.table > thead > tr > td, .table > tbody > tr > td {
+		padding: 0;
+	}
 }
 
 .body-scrollable {
@@ -20,34 +28,51 @@
 	background-color: white;
 	color: @text-muted;
 	font-weight: bold;
+
+	.content span {
+		cursor: pointer;
+	}
 }
 
 .data-table-col {
-	display: table-cell;
-	border: 1px solid @border-color;
-	white-space: nowrap;
+	// display: table-cell;
+	// display: inline-block;
+	// border: 1px solid @border-color;
+	// white-space: nowrap;
+	// position: relative;
 
-	& > div {
-		padding: 10px;
+	.content {
+		padding: 8px;
+		// border: 1px solid white;
 	}
 
-	&.numeric {
-		text-align: right;
-	}
+	// &.selected .content {
+	// 	border: 1px solid @brand-primary;
+	// }
 
-	div {
-		border: 1px solid white;
-	}
+	// &:hover, & + .data-table-col:hover {
+	// 	.handle {
+	// 		opacity: 1;
+	// 	}
+	// }
 
-	&.selected > div {
-		border: 1px solid @brand-primary;
-	}
-	// &:focus {
-	// 	outline: 2px solid @brand-primary;
+	// .handle {
+	// 	opacity: 0;
+	// 	position: absolute;
+	// 	right: -2px;
+	// 	top: 0;
+	// 	width: 5px;
+	// 	background-color: @border-color;
+	// 	border: 1px solid @border-color;
+	// 	height: 100%;
+	// 	cursor: ew-resize;
+	// 	pointer-events: all;
+	// 	// background-color: @light-bg;
 	// }
 }
 
 .data-table-row {
-	display: table-row;
+	// display: table-row;
+	// white-space: nowrap;
 }
 
