--- a/frappe/public/less/report.less
+++ b/frappe/public/less/report.less
@@ -67,3 +67,19 @@
 		margin-bottom: 2px;
 	}
 }
+
+// datatable
+.data-table  {
+	.frappe-control {
+		margin: 0;
+		padding: 0;
+
+		.form-group {
+			margin: 0;
+		}
+
+		input {
+			border: none;
+		}
+	}
+}
