--- a/frappe/templates/print_formats/standard_macros.html
+++ b/frappe/templates/print_formats/standard_macros.html
@@ -60,9 +60,9 @@ data-fieldname="{{ df.fieldname }}" data-fieldtype="{{ df.fieldtype }}"
 {%- endmacro %}
 
 {%- macro render_field_with_label(df, doc) -%}
-		<div id={{ df.fieldname }} class="row {% if df.bold %}important{% endif %} data-field" {{ fieldmeta(df) }}>
-			<div class="col-xs-{{ "9" if df.fieldtype=="Check" else "5" }}
-				{%- if not doc._align_labels_left %} text-right{%- endif -%}">
+		<div class="row {% if df.bold %}important{% endif %} data-field {{ df.fieldname }}" {{ fieldmeta(df) }}>
+			<div class="col-xs-{{ "9" if df.fieldtype=="Check" else "5" }} label-col
+				{%- if not doc._align_labels_left %} text-right {%- endif -%}">
 				{% if df.fieldtype not in ("Image","HTML","Check") and
 					doc.get(df.fieldname) != None %}
 				<label>{{ _(df.label) }}</label>
