--- a/frappe/public/less/desk.less
+++ b/frappe/public/less/desk.less
@@ -1074,3 +1074,65 @@ input[type="checkbox"] {
 		}
 	}
 }
+
+// Action Cards
+.cards-container {
+	.card-container {
+		background-color: #fff;
+		margin: 10px 7px;
+		border: 1px solid #e5e5e5;
+		border-radius: 3px;
+		display: flex;
+
+		&.done {
+			background-color: #fafbfc;
+
+			.title {
+				color: #8D99A6;
+			}
+		}
+
+		&.single_action {
+			cursor: pointer;
+
+			// .title {
+			// 	color: blue;
+			// }
+
+			// emphasize image overlay
+		}
+	}
+
+	.title {
+		margin-top: 0px;
+	}
+
+	.content {
+		font-size: 12px;
+	}
+	// .img-container {
+
+	// }
+
+	img {
+		width: 195px;
+
+		&.clip {
+			margin: -15px 0px;
+			clip-path: inset(15px 0px 15px 0px);
+		}
+	}
+
+	.content-container {
+		padding: 10px;
+		width: 516px;
+	}
+
+	.actions {
+		margin-top: 15px;
+
+		button:not(:first-child) {
+			margin-left: 15px;
+		}
+	}
+}
